# rust-bench

./: README.md  executors.py  extract_rust.py  main.py  make_graph.py  merge_files.py  model_stats.py  problems.jsonl  prompts.py  requirements.txt
results/: 2024-11-21.jsonl  2024-11-22.jsonl  2024-11-26.jsonl
rust_execution/: Cargo.toml
