[package]
name = "rust_execution"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
itertools = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4"] }
csv = "1.2"  # For parsing CSV files
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
url = "2.2"